fix: change background color for visibility

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 :root {
   --text: #272716;
-  --background: #fefcf7;
+  --background: #f6f6f6;
   --primary: hsl(39, 82%, 50%);
   --primary-backdrop: hsl(39 60% 50% / 1);
   --secondary: #e1e199;
